--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
