--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/d3-cloud": "^1.2.9",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^4.5.1",
     "@vue/tsconfig": "^0.7.0",
