--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,3 +19,25 @@
   "include": ["src/**/*", "src/**/*.vue"],
   "exclude": ["node_modules"]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "esnext",
+//     "module": "esnext",
+//     "strict": true,
+//     "jsx": "preserve",
+//     "moduleResolution": "node",
+//     "allowSyntheticDefaultImports": true,
+//     "esModuleInterop": true,
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "noEmit": true,
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["src/*"]
+//     },
+//     "types": ["vite/client", "vue"]
+//   },
+//   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+//   "exclude": ["node_modules"]
+// }
